syntax = "proto3";

package proverpkg;

import public "util.proto";

message R1csPpzksnarkVerificationKey {
    HexadecimalPointBaseGroup2Affine a = 1;
    HexadecimalPointBaseGroup1Affine b = 2;
    HexadecimalPointBaseGroup2Affine c = 3;
    HexadecimalPointBaseGroup2Affine g = 4;
    HexadecimalPointBaseGroup1Affine gb1 = 5;
    HexadecimalPointBaseGroup2Affine gb2 = 6;
    HexadecimalPointBaseGroup2Affine z = 7;
    string IC = 8;
  }
  
  // Contains the proof along with the public input
  message R1csPpzksnarkExtendedProof {
    HexadecimalPointBaseGroup1Affine a = 1;
    HexadecimalPointBaseGroup1Affine aP = 2;
    HexadecimalPointBaseGroup2Affine b = 3;
    HexadecimalPointBaseGroup1Affine bP = 4;
    HexadecimalPointBaseGroup1Affine c = 5;
    HexadecimalPointBaseGroup1Affine cP = 6;
    HexadecimalPointBaseGroup1Affine h = 7;
    HexadecimalPointBaseGroup1Affine k = 8;
    string inputs = 9;
  }
  